Arreglando bugs
