# swagger_output.json
@@ -5,7 +5,7 @@
     "title": "API para radioxenter",
     "description": "Documentation automatically generated by the <b>swagger.autogen</b> module."
   },
-  "host": "localhost:4000",
+  "host": "vmradioxenter.southcentralus.cloudapp.azure.com:4000",
   "basePath": "/api",
   "tags": [],
   "schemes": [
@@ -2641,26 +2641,6 @@
           "204": {
             "description": "No Content"
           },
-          "404": {
-            "description": "Not Found"
-          }
-        }
-      }
-    },
-    "/facturas/download/{nombre_archivo}": {
-      "get": {
-        "tags": [
-          "Facturas"
-        ],
-        "description": "Endpoint para descargar una factura",
-        "parameters": [
-          {
-            "name": "nombre_archivo",
-            "in": "path",
-            "required": true
-          }
-        ],
-        "responses": {
           "404": {
             "description": "Not Found"
           }
